--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -19,11 +19,12 @@ spec:
         ports:
         - containerPort: 8000
         env:
+# REPLACE THESE VALUES with the actual ones from your college admin
         - name: POSTGRES_SERVER
-          value: "cashvista-db"
-        - name: POSTGRES_DB
-          value: "cashvista"
+          value: "college-db-hostname.imcc.com" 
         - name: POSTGRES_USER
-          value: "postgres"
+          value: "your_assigned_username"
         - name: POSTGRES_PASSWORD
-          value: "postgres"
+          value: "your_assigned_password"
+        - name: POSTGRES_DB
+          value: "your_assigned_db_name"  
